# voxcut

./: .gitignore  LICENSE  README.md  alex.mp3.sam3.json  alex_frag01_hit_sound_target.wav.sam3.json  alex_full_first_speaker_voice_target.wav.sam3.json  alex_full_first_speaker_voice_target_frag05_first_speaker_voice_target.wav.sam3.json  audio_tui.py  audiocut.py  pyproject.toml  separate.py
sam3_audio/: __init__.py  cli.py  ffmpeg.py  fragment.py  player.py  separator.py  session.py  timeutil.py  tui.py  waveform.py
sam3_audio/screens/: __init__.py  describe_prompt.py  help.py  save_dialog.py  separation_result.py
tests/: conftest.py  test_ffmpeg.py  test_fragment.py  test_player.py  test_session.py  test_timeutil.py  test_tui_smoke.py  test_waveform.py
voxcut/: __init__.py  cli.py  player.py  session.py  tui.py  waveform.py
voxcut/screens/: __init__.py  confirm.py  help.py  save_dialog.py  welcome.py
