[project]
name = "sam3-audio"
version = "0.1.0"
description = "Voice isolation and audio fragment cutting TUI powered by SAM-Audio (MLX)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio",
    "numpy",
    "sounddevice",
    "soundfile",
    "textual",
    "textual-fspicker",
]

[project.scripts]
sam3-audio = "sam3_audio.cli:tui_main"
sam3-separate = "sam3_audio.cli:separate_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sam3_audio"]
