[project]
name = "voxcut"
version = "0.1.0"
description = "Voice isolation and audio fragment cutting TUI powered by SAM-Audio (MLX)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4"
authors = [{ name = "Anton Borisov-Fedosov" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = [
    "mlx-audio>=0.1.0",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "textual>=1.0",
    "textual-fspicker>=1.0",
]

[project.urls]
Repository = "https://github.com/nullhtp/voxcut"

[project.scripts]
voxcut = "voxcut.cli:tui_main"
voxcut-separate = "voxcut.cli:separate_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voxcut"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "RUF001",  # intentional Unicode (× in help text)
    "RUF012",  # mutable class attrs (Textual pattern)
    "SIM105",  # contextlib.suppress less readable for cleanup
]

[tool.ruff.lint.isort]
known-first-party = ["voxcut"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
